# strawberry-migration-test

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  start_local.sh
config/gunicorn/: config.py
core/: context.py  schema.py  settings.py  urls.py
core/data/: apps.py
core/data/graphql/types/: __init__.py  data.py
core/data/migrations/: 0001_initial.py
core/data/models/: __init__.py  data.py
core/shared/graphql/: constants.py  exceptions.py  utils.py
core/shared/models/: __init__.py  base_model.py
core/user/graphql/: schema.py
core/user/graphql/queries/: user.py
core/user/graphql/types/: user.py
core/user/migrations/: 0001_initial.py
core/user/models/: user.py
